# oop

Debug Teste Lab 7/: VectorDinamicTemplate.h  main.cpp
Lab 6-7/: CMakeLists.txt  main.cpp
Lab 6-7/Controller/: service.cpp  service.h
Lab 6-7/Domain/: linked_list.h  locatar.cpp  locatar.h
Lab 6-7/Errors/: errors.h
Lab 6-7/Repository/: notifications.cpp  notifications.h  repo.cpp  repo.h
Lab 6-7/Tests/: tests.cpp  tests.h
Lab 6-7/UI/: console.cpp  console.h
Lab 6-7/Undo/: undo_action.h
Lab 6-7/Utils/: tools.cpp  tools.h
Lab 6-7/Validator/: validator.cpp  validator.h
Lab2-4/: CMakeLists.txt  main.c  valgrinder.xml
Lab2-4/Consola/: consola.c  consola.h
Lab2-4/Domeniu/: list_tranzactie.c  list_tranzactie.h  tranzactie.c  tranzactie.h
Lab2-4/Erori/: erors.c  erors.h
Lab2-4/Repo/: repo.c  repo.h
Lab2-4/Servis/: servis.c  servis.h
Lab2-4/Teste/: test_validator.c  test_validator.h  teste servis.cpp  teste.c  teste.h  teste_domeniu.c  teste_domeniu.h  teste_repo.c  teste_repo.h  teste_servis.c  teste_servis.h
Lab2-4/Validator/: validator_tranzacti.c  validator_tranzacti.h
Project1/: CMakeLists.txt  lab1.c  main.c  temalab1.c
Seminar1/: CMakeLists.txt  main.c
Tema Lab1/: CMakeLists.txt  main.c
Tema Lab1/Controller/: service.c  service.h
Tema Lab1/Domain/: offer.h  offer_list.c  offer_list.h
Tema Lab1/Errors/: errors.c  errors.h
Tema Lab1/Repository/: repo.c  repo.h
Tema Lab1/Tests/: test_domain.c  test_domain.h  test_repo.c  test_repo.h  test_service.c  test_service.h  test_validator.c  test_validator.h  tests.c  tests.h
Tema Lab1/Ui/: console.c  console.h
Tema Lab1/Validator/: validate_offer.c  validate_offer.h
